[package]
name = "randerive"
version = "0.1.0"
edition = "2021"
description = "A simple derive macro to allow for random generation of custom structs"
license = "MIT"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
syn = "1.0.84"
quote = "1.0.14"
